--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://j.mp/otfdnet" target="_blank">
+                <a href="https://j.mp/otfdnet" target="_blank" rel="noopener">
                     <div>
                         NET<span uk-icon="icon: push" class="uk-text-meta"></span>
                         <div class="uk-text-small">オンラインサービス「おとふだNET」</div>
@@ -248,14 +248,14 @@
 
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
-                <a href="https://twitter.com/otofuda" class="uk-icon-button uk-margin-small-right" uk-icon="twitter" target="_blank"></a>
+                <a href="https://twitter.com/otofuda" class="uk-icon-button uk-margin-small-right" uk-icon="twitter" target="_blank" rel="noopener"></a>
             </ul>
         </div>
     </nav>
 
     <div class="sticky-container">
         <div class="uk-cover-container uk-height-medium">
-                <iframe src="https://www.youtube-nocookie.com/embed/WouN3DO9HyE?mute=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent" width="1920" height="1080" frameborder="0" allowfullscreen uk-cover></iframe>
+                <iframe title="Otofuda" src="https://www.youtube-nocookie.com/embed/WouN3DO9HyE?mute=1&amp;autoplay=1&amp;controls=0&amp;showinfo=0&amp;rel=0&amp;loop=1&amp;modestbranding=1&amp;wmode=transparent" width="1920" height="1080" frameborder="0" allowfullscreen uk-cover></iframe title="My Daily Marathon Tracker">
         </div>
     
         <section>
@@ -309,7 +309,7 @@
                 <h2 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" _uk-parallax="x: -100,0; viewport: 0.5">ICカードによる個人認証</h2>
                 <p class="common-medium" _uk-parallax="x: -100,0; viewport: 0.5">お手持ちのアミューズメント用ICカードまたは交通系ICカードを筐体にかざすだけでプレイヤー認証とプレーデータ保存が可能です。</p>
                 <p class="common-medium" _uk-parallax="x: -100,0; viewport: 0.5">初回のICカードをかざすと、アクセスコード・QRコードが表示され、スマホやPCから「おとふだNET」にログインできるようになります。</p>
-                <a href="https://j.mp/otfdnet" class="common-imglink" target="_blank">
+                <a href="https://j.mp/otfdnet" class="common-imglink" target="_blank" rel="noopener">
                     <div>
                         <img src="./NET_logo_white.png" alt="おとふだNET"><br>
                         おとふだNETはこちら<span uk-icon="icon: push" class="uk-text-meta"></span>
@@ -357,16 +357,16 @@
             uk-slideshow="animation: push; max-height: 400">
             <ul class="uk-slideshow-items">
                 <li>
-                    <img src="images/location11.jpg" alt="" uk-cover>
+                    <img src="images/location11.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                 </li>
                 <li>
-                    <img src="images/location12.jpg" alt="" uk-cover>
+                    <img src="images/location12.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                 </li>
                 <li>
-                    <img src="images/location13.jpg" alt="" uk-cover>
+                    <img src="images/location13.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                 </li>
                 <li>
-                    <img src="images/location14.jpg" alt="" uk-cover>
+                    <img src="images/location14.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                 </li>
             </ul>
             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
@@ -386,16 +386,16 @@
                 uk-slideshow="animation: push; max-height: 400">
                 <ul class="uk-slideshow-items">
                     <li>
-                        <img src="./images/location01.jpg" alt="" uk-cover>
+                        <img src="./images/location01.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                     </li>
                     <li>
-                        <img src="images/location02.jpg" alt="" uk-cover>
+                        <img src="images/location02.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                     </li>
                     <li>
-                        <img src="images/location03.jpg" alt="" uk-cover>
+                        <img src="images/location03.jpg" alt="ロケテスト" loading="lazy" uk-cover>
                     </li>
                     <li>
-                        <img src="images/location04.png" alt="" uk-cover>
+                        <img src="images/location04.png" alt="ロケテスト" loading="lazy" uk-cover>
                     </li>
                 </ul>
                 <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
@@ -424,8 +424,6 @@
             <a href="https://www.instagram.com/otfdpr/?hl=ja" class="links-link fab fa-instagram" uk-tooltip="Instagram"></a>
         </div>
     </section>
-
-    <script src="main.js"></script>
 </body>
 
 </html>
