--- a/music.html
+++ b/music.html
@@ -228,7 +228,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://j.mp/otfdnet" target="_blank">
+                <a href="https://j.mp/otfdnet" target="_blank" rel="noopener">
                     <div>
                         NET<span uk-icon="icon: push" class="uk-text-meta"></span>
                         <div class="uk-text-small">オンラインサービス「おとふだNET」</div>
@@ -250,7 +250,7 @@
 
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
-                <a href="https://twitter.com/otofuda" class="uk-icon-button uk-margin-small-right" uk-icon="twitter" target="_blank"></a>
+                <a href="https://twitter.com/otofuda" class="uk-icon-button uk-margin-small-right" uk-icon="twitter" target="_blank" rel="noopener"></a>
             </ul>
         </div>
     </nav>
