ナビゲーションにBOOTHのリンクを追加

--- a/index.html
+++ b/index.html
@@ -233,6 +233,14 @@
                     </div>
                 </a>
             </li>
+            <li>
+                <a href="https://otofuda.booth.pm" target="_blank" rel="noopener">
+                    <div>
+                        BOOTH<span uk-icon="icon: push" class="uk-text-meta"></span>
+                        <div class="uk-text-small">オリジナルグッズを販売中</div>
+                    </div>
+                </a>
+            </li>
         </ul>
     </div>
 
@@ -289,6 +297,10 @@
         </a>
     </section>
 
+    <section uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">
+        <h2 class="uk-heading-line uk-text-center"><span>映像</span></h2>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3U9wZaMz6QY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope" allowfullscreen style="max-width: 100%"></iframe>
+    </section>
 
     <section class="c-container">
         <div class="uk-height-large uk-background-cover uk-light uk-flex" uk-parallax="x: -100,0; opacity: 0,1; y: 0,0; viewport: 0.35" style="background-image: url('./images/c01.png');">
