--- a/music.html
+++ b/music.html
@@ -235,6 +235,14 @@
                     </div>
                 </a>
             </li>
+            <li>
+                <a href="https://otofuda.booth.pm" target="_blank" rel="noopener">
+                    <div>
+                        BOOTH<span uk-icon="icon: push" class="uk-text-meta"></span>
+                        <div class="uk-text-small">オリジナルグッズを販売中</div>
+                    </div>
+                </a>
+            </li>
         </ul>
     </div>
 
