--- a/char.html
+++ b/char.html
@@ -48,7 +48,7 @@
         { 
           "@context": "http://schema.org/", 
           "@type": "WebSite",
-          "name": "キャラクター" | 音札 おとふだ",
+          "name": "キャラクター | 音札 おとふだ",
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/char"
         } 
     </script>
