--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>音札 -おとふだ-</title>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Sawarabi+Mincho&display=swap" rel="stylesheet"> 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144641349-1"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {dataLayer.push( arguments );}
-        gtag( 'js', new Date() );
-
-        gtag( 'config', 'UA-144641349-1' );
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-144641349-1');
     </script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
