StoryTellerの実装を追加(distテスト段階)

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
     <link rel="manifest" href="ico/manifest.json">
     <meta name="theme-color" content="#303030">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -33,6 +22,8 @@
       gtag('js', new Date());
       gtag('config', 'UA-144641349-1');
     </script>
+    <script src="<%= htmlWebpackPlugin.files.publicPath %>story_teller/TemplateData/UnityProgress.js"></script> 
+    <script src="<%= htmlWebpackPlugin.files.publicPath %>story_teller/Build/UnityLoader.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/" />
