--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </script>
     <script src="<%= htmlWebpackPlugin.files.publicPath %>story_teller/TemplateData/UnityProgress.js"></script> 
     <script src="<%= htmlWebpackPlugin.files.publicPath %>story_teller/Build/UnityLoader.js"></script>
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@otofuda" />
     <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/" />
     <meta property="og:title" content="音札 -おとふだ-" />
