--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
     </script>
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@otofuda" />
-    <meta property="og:url" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/" />
+    <meta property="og:url" content="https://arcade.otofuda.com/" />
     <meta property="og:title" content="音札 -おとふだ-" />
     <meta property="og:description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
-    <meta property="og:image" content="https://www.ne.senshu-u.ac.jp/~proj2019-13/images/thumb.png" />
+    <meta property="og:image" content="https://arcade.otofuda.com/images/thumb.png" />
   </head>
   <body>
     <noscript>
