--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="96x96" href="./favicon-96x96.png">
@@ -12,7 +12,7 @@
     <meta name="robots" content="noarchive">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= assetPrefix %>favicon.ico">
     <title>音札 -おとふだ-</title>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Sawarabi+Mincho&display=swap" rel="stylesheet"> 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144641349-1"></script>
@@ -31,7 +31,7 @@
   </head>
   <body>
     <noscript>
-      <strong>申し訳ありませんが、<%= htmlWebpackPlugin.options.title %>はJavaScriptを有効にしないと正しく動作しません。有効にして続行してください。</strong>
+      <strong>申し訳ありませんが、このWebサイトはJavaScriptを有効にしないと正しく動作しません。有効にして続行してください。</strong>
     </noscript>
     <div id="app">
     </div>
